css/mainpage.css
.form-inline .form-control {
    width: 100%;
}
input, select {
    margin-bottom: 5px;
}
.roots h3 {
    font-size: 1.25em;
    font-weight: bold;
    margin: 10px 0;
}
.roots {
    padding: 15px 0 20px;
}
.child {
    margin: 5px 0;
}
.children {
    border-top: 1px solid #ccc;
    padding: 15px 0;
    display: none;
}
/*************************************/
.new-ads h3 {
    font-size: 1em;
    margin: 10px 0 2px;
}
.new-ads h4 {
    margin: 5px 0 0;
}
.preview {
    width: 172px;
    float: left;
    margin: 8px;
}

/*
.new-ad {
    border: 1px solid #ccc;
    margin: 10px 5px;
    box-sizing: border-box;
    -moz-box-sizing: border-box;
    float: left;
    height: 144px;
    width: 172px;
}
.ad-preview {
    height: 120px;
    background: rgb(242,242,242);
    text-align: center;
    line-height: 120px;
    display: block;
}
.thumb-title {
    padding: 3px;
}
.thumb-small {
    vertical-align: middle;
}*/

